# pro-walking-hack

./: .gitignore  Cargo.toml  Makefile  README.md  aloha_real.py  check_motor.py  check_motors.py  check_xbox.py  collect.py  convert.py  demo copy.py  demo.py  deploy.py  deploy_log.py  deploy_policy.py  edit_metadata.py  env.py  freeze.py  gamepad.py  go_to_zero.py  ik.py  imu_ang_euler_log.txt  imu_read.py  imu_test.py  imu_txt_plot.py  kos_test.py  light_walking.onnx  main.cpp  original.py  pose.py  position_control.jit  position_control.onnx  pykos_poll.py  pyproject.toml  read_kinfer_metadata.py  read_positions.py  record_replay.py  recorded_positions_20241213_170154.json  recorded_positions_20241214_000111.json  requirements.txt  (+17 more)
cpp/: Makefile  README.md  main.cpp
data_collection/: constants.py  util.py
model/: Cargo.toml
model/src/: main.rs  (+1 more)
models/: gpr_0.5s_pawel.kinfer  standing.kinfer
motors/: Cargo.toml
policies/: filtered_walking.kinfer  gpr_standing.kinfer  gpr_walking_weak.kinfer  less_noise.kinfer  noisy_imu_walking.kinfer  noisy_small.kinfer  normal_short_plane.kinfer  normal_short_trimesh.kinfer  short_steps.kinfer
ref/: README.md  main.cpp  sim2sim.py
saved_poses/: actually_standing_recorded_positions_20241214_004109.json  boxing_recorded_positions_20241213_232857.json  new_standing_recorded_positions_20241214_003256.json  one_arm_up_recorded_positions_20241213_233734.json  recorded_positions_20241214_001402.json  recorded_positions_20241214_003958.json  working_standing_recorded_positions_20241214_003522.json
src/: main.rs  robstride.rs
(+39 files in other folders)
